# trustruntime

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  test-server-config.toml
.opencode/skills/add-code-comments/: REFERENCE.md  SKILL.md
.opencode/skills/commit-rules/: SKILL.md
.opencode/skills/integration-test/: REFERENCE.md  SKILL.md
.opencode/skills/wsl-cargo/: SKILL.md
conf/: agent.toml
docs/: architecture.md  cms-test-cli-design.md  contributing.md  faq.md  functional-design.md  integration-test-design.md  interface.md  requirements.md  user-guide.md
docs/adr/: 0001-unified-result-code-encoding.md  0002-cms-library-selection.md  0003-plugin-integration-pattern.md  0004-unified-openssl-for-tls-and-cms.md  0005-transport-layer-abstraction.md  0006-systemd-service-configuration.md  0007-error-code-extension.md  0008-test-architecture.md
docs/detailed-design/: 01-message-and-config.md  02-certificate-management.md  03-signing-and-verification.md  04-plugin-framework.md  05-communication.md  06-process-lifecycle.md  07-logging.md
packaging/: README.md  build-rpm.sh  trustruntime.service
rust/: Cargo.toml  README.md  rustfmt.toml
rust/builder/: Cargo.toml  bootstrapd  build.sh  initrd.list
rust/examples/: README.md  sign_example.rs  verify_and_sign_example.rs  verify_example.rs
rust/examples/common/: mod.rs
rust/framework/: Cargo.toml
rust/framework/src/: lib.rs
rust/framework/src/cert/: mod.rs
rust/framework/src/communication/: mod.rs
rust/framework/src/communication/vsock_server/: connection.rs  error.rs  listener.rs  mod.rs  tests.rs  tls.rs
rust/framework/src/config/: mod.rs
rust/framework/src/core/: cert_checker.rs  daemon.rs  mod.rs  signal.rs
rust/framework/src/logger/: mod.rs
rust/framework/src/message/: mod.rs
rust/framework/src/plugin_manager/: mod.rs
rust/framework/src/transport/: mod.rs
rust/integration-tests/: Cargo.toml  README.md
rust/integration-tests/src/: lib.rs  proc_manager.rs  test_cert_gen.rs  test_crl_gen.rs  test_helpers.rs  vsock_cid_test.rs  vsock_client.rs
rust/integration-tests/src/tests/: boundary_scenarios.rs  cert_check_tests.rs  communication_tests.rs  error_scenarios.rs  handler_tests.rs  lifecycle_tests.rs  mod.rs  normal_scenarios.rs  proc_debug_test.rs  tls_debug_test.rs
rust/launcher/: Cargo.toml
rust/launcher/conf/: trt_launcher.conf  trt_launcher.service
rust/launcher/src/: cli.rs  dispatcher.rs  logger.rs  main.rs  qemu.rs  utils.rs
rust/plugins/trustring/: Cargo.toml
rust/plugins/trustring/src/: cert_loader.rs  error_code_mapper.rs  handler.rs  lib.rs  sign.rs  verify.rs
rust/scripts/: run-asan-test.sh  run-integration-tests.sh
rust/tools/cert-gen/: Cargo.toml
rust/tools/cert-gen/src/: certificate.rs  generator.rs  lib.rs  main.rs  utils.rs
rust/tools/cms-test-cli/: Cargo.toml  README.md  config.example.toml
rust/tools/cms-test-cli/src/: config.rs  main.rs
rust/tools/cms-test-cli/src/repl/: commands.rs  mod.rs  parser.rs
rust/tools/cms-test-cli/src/stats/: mod.rs  reporter.rs
rust/tools/cms-test-cli/src/testers/: concurrent.rs  interactive.rs  mod.rs  performance.rs  scenarios.rs  security.rs
rust/trustruntime/: Cargo.toml
rust/trustruntime/src/: main.rs
