[workspace]
members = [
    "framework",
    "trustruntime",
    "plugins/trustring",
    "integration-tests",
    "tools/cert-gen",
    "tools/cms-test-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
openssl = "0.10"
openssl-sys = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
log4rs = { version = "1", features = ["gzip", "compound_policy", "fixed_window_roller", "size_trigger", "pattern_encoder", "rolling_file_appender"] }
anyhow = "1"
thiserror = "1"
sd-notify = "0.4"
foreign-types-shared = "0.1"
base64 = "0.22"
tempfile = "3.10"
clap = { version = "4.5", features = ["derive"] }
vsock = "0.4"
async-trait = "0.1"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
