[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

[dependencies]
trustruntime-framework = { path = "../framework" }
trustring = { path = "../plugins/trustring" }
async-trait.workspace = true
openssl.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
tempfile.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
vsock.workspace = true

[[test]]
name = "normal_scenarios"
path = "src/tests/normal_scenarios.rs"

[[test]]
name = "error_scenarios"
path = "src/tests/error_scenarios.rs"

[[test]]
name = "boundary_scenarios"
path = "src/tests/boundary_scenarios.rs"

[[test]]
name = "communication_tests"
path = "src/tests/communication_tests.rs"

[[test]]
name = "cert_check_tests"
path = "src/tests/cert_check_tests.rs"