[package]
name = "trustring"
version.workspace = true
edition.workspace = true

[dependencies]
trustruntime-framework = { path = "../../framework" }
openssl.workspace = true
openssl-sys.workspace = true
foreign-types-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
